# SICL-Retriever

./: .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: citations.md
examples/cv_en/: README.md  candidate_text.npy  candidates.jsonl  expected_ticl.jsonl  test.jsonl
examples/minimal/: candidate_audio.npy  candidate_text.npy  candidates.jsonl  expected_ticl.jsonl  expected_ticl_plus.jsonl  test.jsonl
src/sicl_retriever/: __init__.py  asr.py  cli.py  embeddings.py  filtering.py  io.py  pipeline.py  presets.py  retrieval.py  validation.py
tests/: test_cv_en_example.py  test_io.py  test_retrieval.py  test_validation.py
